feat: remove patch, update nw package & deps
