# src/routes.ts
@@ -29,7 +29,7 @@ const models: TsoaRoute.Models = {
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "Record_Inventories.Inventory_": {
         "dataType": "refAlias",
-        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"armor":{"ref":"Inventory","required":true},"equipment":{"ref":"Inventory","required":true},"wardrobe":{"ref":"Inventory","required":true},"inventory":{"ref":"Inventory","required":true},"enderchest":{"ref":"Inventory","required":true},"accessories":{"ref":"Inventory","required":true},"personal_vault":{"ref":"Inventory","required":true},"fishing_bag":{"ref":"Inventory","required":true},"potion_bag":{"ref":"Inventory","required":true},"sacks_bag":{"ref":"Inventory","required":true},"candy_inventory":{"ref":"Inventory","required":true},"carnival_mask_inventory":{"ref":"Inventory","required":true},"storage":{"ref":"Inventory","required":true},"museum":{"ref":"Inventory","required":true},"sacks":{"ref":"Inventory","required":true},"essence":{"ref":"Inventory","required":true},"pets":{"ref":"Inventory","required":true},"quiver":{"ref":"Inventory","required":true}},"validators":{}},
+        "type": {"dataType":"nestedObjectLiteral","nestedProperties":{"armor":{"ref":"Inventory","required":true},"equipment":{"ref":"Inventory","required":true},"wardrobe":{"ref":"Inventory","required":true},"inventory":{"ref":"Inventory","required":true},"enderchest":{"ref":"Inventory","required":true},"accessories":{"ref":"Inventory","required":true},"personal_vault":{"ref":"Inventory","required":true},"fishing_bag":{"ref":"Inventory","required":true},"potion_bag":{"ref":"Inventory","required":true},"sacks_bag":{"ref":"Inventory","required":true},"candy_inventory":{"ref":"Inventory","required":true},"carnival_mask_inventory":{"ref":"Inventory","required":true},"storage":{"ref":"Inventory","required":true},"museum":{"ref":"Inventory","required":true},"sacks":{"ref":"Inventory","required":true},"essence":{"ref":"Inventory","required":true},"pets":{"ref":"Inventory","required":true},"quiver":{"ref":"Inventory","required":true},"farming_toolkit":{"ref":"Inventory","required":true},"hunting_toolkit":{"ref":"Inventory","required":true}},"validators":{}},
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "NetworthResult": {
